fix: fix spacing and add valid large spacing

--- a/packages/dnb-ui-lib/src/components/form-status/style/_form-status.scss
+++ b/packages/dnb-ui-lib/src/components/form-status/style/_form-status.scss
@@ -16,13 +16,12 @@
     align-items: flex-start;
 
     min-width: inherit;
-    // padding: 0.5rem 1rem 1rem 1rem;
 
     border-radius: var(--form-status-radius);
   }
 
   &__text {
-    padding: 0.5rem 1rem;
+    padding: 0.625rem 1rem;
 
     cursor: text;
     color: inherit;
@@ -50,8 +49,8 @@
 
   // Large
   &__size--large &__text {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 1.125rem;
+    padding-bottom: 1.125rem;
   }
   &__size--large &__shell > .dnb-icon {
     margin-top: 0.6666666em;
